@@ -54,7 +54,7 @@
 #include <errno.h>
 #include <stdarg.h>
 
-static char const rcsid[] = "$Id: display.c,v 1.20 2002/03/13 18:54:40 broeker Exp $";
+static char const rcsid[] = "$Id: display.c,v 1.21 2002/10/29 16:45:50 broeker Exp $";
 
 int	booklen;		/* OGS book name display field length */
 int	*displine;		/* screen line of displayed reference */
@@ -563,6 +563,11 @@ progress(char *what, long current, long max)
 			addstr(msg);
 			refresh();
 		}
+		else if (verbosemode == YES)
+		{
+			sprintf(msg, "> %s %ld of %ld", what, current, max);
+		}
+
 		start = now;
 		if ((linemode == NO) && (incurses == YES))
 		{
@@ -576,7 +581,7 @@ progress(char *what, long current, long max)
 			refresh();
 		}
 		else
-			if (linemode == NO)
+			if (linemode == NO || verbosemode == YES)
 				postmsg(msg);
 	}
 	++searchcount;
@@ -610,6 +615,7 @@ postmsg(char *msg)
 {
 	if (linemode == YES || incurses == NO) {
 		(void) printf("%s\n", msg);
+		fflush(stdout);
 	}
 	else {
 		move(MSGLINE, 0);
